--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Portofolio-DIJ</title>
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="./css/navbar.css">
         <link rel="stylesheet" href="./css/profile.css">
         <link rel="stylesheet" href="./css/autotext.css">
+        <link rel="stylesheet" href="./css/project.css">
         <link rel="stylesheet" href="./css/content.css">
         <link rel="stylesheet" href="./css/contact.css">
         <link rel="stylesheet" href="./css/footer.css">
@@ -110,17 +111,159 @@
                 </div>
             </div>
         </div>
+
         <!-- Skill End -->
 
+        <!-- Project Start -->
+
+        <div class="project-box">
+            <h2><span>My</span> Project</h2>
+            <h2>Sertifikat Bootcamp Dicoding</h2>
+            <!-- Project 1 -->
+            <div class="project-box-card">
+                <div class="card-project">
+                    <img src="./img/project/aws1.jpeg" alt="">
+                </div>
+                <div class="project-table">
+                    <table>
+                        <tr class="baris-bawah">
+                            <td><h4>Type Sertifikat</h4></td>
+                            <td>:&nbsp;&nbsp;</td>
+                            <td>AWS Cloud</td>
+                        </tr>
+                        <tr class="baris-bawah">
+                            <td><h4>Fungsi</h4></td>
+                            <td>:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                            <td>
+                                <ul>
+                                    <li>Untuk menyediakan layanan
+                                        cloud yang aman</li>
+                                    <li>Menawarkan tenaga komputasi</li>
+                                    <li>Ruang penyimpanan
+                                        database</li>
+                                    <li>"Content Delivery Network"</li>
+                                    <li>dan
+                                        fungsionalitas lainnya yang membantu
+                                        banyak
+                                        bisnis untuk berkembang dan menjalankan
+                                        aplikasi
+                                        dengan baik.</li>
+                                </ul>
+                            </td>
+                        </tr>
+                        <tr class="baris-bawah">
+                            <td><h4>Deskripsi</h4></td>
+                            <td>:&nbsp;&nbsp;</td>
+                            <td>Amazon Web Services (AWS) adalah cloud yang
+                                paling lengkap dan diadopsi secara luas di
+                                dunia, menawarkan lebih dari 200 layanan
+                                berfitur lengkap dari pusat data secara global.</td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Project 2 -->
+                <div class="project-box-card">
+                    <div class="card-project">
+                        <img src="./img/project/bdpj1.jpeg" alt="">
+                    </div>
+                    <div class="project-table">
+                        <table>
+                            <tr class="baris-bawah">
+                                <td><h4>Type Sertifikat</h4></td>
+                                <td>:&nbsp;&nbsp;</td>
+                                <td>Dasar Program JavaScript</td>
+                            </tr>
+                            <tr class="baris-bawah">
+                                <td><h4>Fungsi</h4></td>
+                                <td>:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                <td>
+                                    <ul>
+                                        <li>Untuk pengembangan aplikasi web dan
+                                            mobile</li>
+                                        <li>Membangun web server dan aplikasi
+                                            server</li>
+                                        <li>Membuat website yang interaktif</li>
+                                        <li>Membuat game development.</li>
+                                        <li>dan lainnya karena Javascript
+                                            merupakan bahasa pemrograman yang
+                                            multifungsi atau ada yang bilang
+                                            mudah di pelajari tapi sulit untuk
+                                            di kuasai.</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr class="baris-bawah">
+                                <td><h4>Deskripsi</h4></td>
+                                <td>:&nbsp;&nbsp;</td>
+                                <td>JavaScript adalah bahasa pemrograman yang
+                                    wajib dikuasai oleh seorang web developer.
+                                    Bahasa ini awalnya digunakan untuk membuat
+                                    sebuah website menjadi lebih interaktif.
+                                    Dalam perkembangannya, JavaScript tidak lagi
+                                    hanya digunakan pada browser, melainkan juga
+                                    bisa berjalan pada server.</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <!-- Project 3 -->
+                <div class="project-box-card">
+                    <div class="card-project">
+                        <img src="./img/project/bmabep1.jpeg" alt="">
+                    </div>
+                    <div class="project-table">
+                        <table>
+                            <tr class="baris-bawah">
+                                <td><h4>Type Sertifikat</h4></td>
+                                <td>:&nbsp;&nbsp;</td>
+                                <td>Membuat Aplikasi Back-End Pemula</td>
+                            </tr>
+                            <tr class="baris-bawah">
+                                <td><h4>Fungsi</h4></td>
+                                <td>:&nbsp;&nbsp;</td>
+                                <td>
+                                    <ul>
+                                        <li>Untuk memahami manajemen atau
+                                            pengelolaan mulai dari pembuatan</li>
+                                        <li>Memahami Input data, Edit data</li>
+                                        <li>Memahami Hapus data</li>
+                                        <li>Memahami, dan lainnya.</li>
+                                        <li>Ada dua jenis database yang bisa
+                                            dipelajari yaitu NoSQL dan SQL.
+                                            Keduanya digunakan untuk manajemen
+                                            jenis data berbeda.</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr class="baris-bawah">
+                                <td><h4>Deskripsi</h4></td>
+                                <td>:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                                <td>Back-End berurusan dengan data-data di balik
+                                    layar, ia bertanggung jawab dalam menyimpan
+                                    dan mengatur data, serta memastikan hal yang
+                                    ada pada sisi klien berfungsi dan tidak
+                                    bermasalah. Back end berkomunikasi dengan
+                                    front end, mengirim dan menerima informasi
+                                    untuk ditampilkan sebagai halaman sebuah
+                                    web.</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Project End -->
+
         <!-- Contact Start -->
-        <section id="contact" class="contact">
-            <h1><span>My</span> Contact</h1>
+        <div id="contact" class="contact">
+            <h2><span>My</span> Contact</h2>
             <div class="row">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.2895496440083!2d106.71005881097224!3d-6.356553562160236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e51666500b0f%3A0x4cdba217bcad2b2a!2sPermata%20Pamulang!5e0!3m2!1sid!2sid!4v1682388735053!5m2!1sid!2sid"
                     width="600" height="450" style="border:0;"
                     allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade"
+                    class="map"></iframe>
                 <form action="">
                     <div class="input-group">
                         <i data-feather="user"></i>
@@ -134,18 +277,15 @@
 
                     <div class="input-group">
                         <i data-feather="phone"></i>
-                        <input type="text" placeholder="nomor handphone">
+                        <input type="text" placeholder="nomor
+                            handphone">
                     </div>
 
                     <button type="submit" class="btn">Kirim Pesan</button>
                 </form>
             </div>
-        </section>
+        </div>
         <!-- Contact End -->
-
-        <!-- Project Start -->
-
-        <!-- Project End -->
 
         <!-- Footer Start -->
         <footer>
